tests/compliance/valid/07-rule.alp
!alp-version: 1.0.0

@rule
  id: no-orms
  description: "Do not use ORMs"
