tests/compliance/invalid/02-task-no-id.alp
!alp-version: 1.0.0

@task
  description: "Task without an ID should fail validation"
